Update main page and Add Stylesheet

--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
+<header>
+	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+</header>
 <body>
-<h1>Fangfang's First Website</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<div class="navigation">
+		<h1>Fangfang's First Website</h1>
+	</div>
+	<div class="content">
+		<img id="profile-photo" src="images/fangfang.png">
+		<p class="caption">I'm hosted with GitHub Pages.</p>
+	</div>
+	<div class="footer">
+		<p>&copy; Fangfang Fu - 2015</p<
+	</div>
 </body>
 </html>
