--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <header>
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+	<script type="text/javascript" src="scripts/jquery-2.1.4.min.js" ></script>
 </header>
 <body>
 	<div class="navigation">
