Update welcome message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</div>
 	<div class="content">
 		<img id="profile-photo" src="images/fangfang.png">
-		<p class="caption">I'm hosted with GitHub Pages.</p>
+		<p class="caption">Welcome to Fangfang Fu's website(欢迎来到付方芳的网站)</p>
 	</div>
 	<div class="footer">
 		<p>&copy; Fangfang Fu - 2015</p<
