--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </header>
 <body>
 	<div class="navigation">
-		<h1>Fangfang's First Website</h1>
+		<h1>Fangfang 方芳</h1>
 	</div>
 	<div class="content">
 		<img id="profile-photo" src="images/fangfang.png">
