--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <header>
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 	<script type="text/javascript" src="scripts/jquery-2.1.4.min.js" ></script>
+	<style>
+	#profile-photo {
+	  float: left;
+	  padding: 20px;
+	  border-radius: 50%;
+    }
+	</style>
 </header>
 <body>
 	<div class="navigation">
 		<h1>Fangfang 方芳</h1>
 		<ul>
-		  <li><a href="home.html">Home</a></li>
+		  <li><a href="index.html">Home</a></li>
 		  <li><a href="profile.html">Profile</a></li>
 		  <li><a href="garden.html">Garden</a></li>
 		  <li><a href="cooking.html">Cooking</a></li>
