--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
 	<div class="navigation">
 		<h1>Fangfang 方芳</h1>
 		<ul>
-		  <li><a href="home.html">Home</a></li>
+		  <li><a href="index.html">Home</a></li>
 		  <li><a href="profile.html">Profile</a></li>
 		  <li><a href="garden.html">Garden</a></li>
 		  <li><a href="cooking.html">Cooking</a></li>
