--- a/project.html
+++ b/project.html
@@ -17,7 +17,7 @@
 		</ul>
         <div class="content">
         <h2>Profile</h2>
-        <p>Hello everyone, welcome to Fangfang's Kitchen. If you want to see Fangfang's cooking, please come back later. Kitchen is building...</p>
+        <p>Hello everyone, welcome to Fangfang's projects. If you want to see Fangfang's projects, please come back later. Kitchen is building...</p>
         </div>
         <div class="footer">
             <p>&copy; Fangfang Fu(付方芳) - 2015</p>
