--- a/index.html
+++ b/index.html
@@ -12,21 +12,24 @@
 	</style>
 </header>
 <body>
-	<div class="navigation">
-		<h1>Fangfang 方芳</h1>
-		<ul>
+	<div class="box">
+        <div class="title">
+		  <h1>Fangfang 方芳</h1>
+        </div>
+		<ul class="navbar">
 		  <li><a href="index.html">Home</a></li>
 		  <li><a href="profile.html">Profile</a></li>
+          <li><a href="project.html">Projects</a></li>
 		  <li><a href="garden.html">Garden</a></li>
 		  <li><a href="cooking.html">Cooking</a></li>
 		</ul>
-	</div>
-	<div class="content">
-		<img id="profile-photo" src="images/fangfang.png">
-		<p class="caption">Welcome to Fangfang Fu's website(欢迎来到付方芳的网站)</p>
-	</div>
-	<div class="footer">
-		<p>&copy; Fangfang Fu(付方芳) - 2015</p>
-	</div>
+        <div class="content">
+            <img id="profile-photo" src="images/fangfang.png">
+            <p class="caption">Welcome to Fangfang Fu's website(欢迎来到付方芳的网站)</p>
+        </div>
+        <div class="footer">
+            <p>&copy; Fangfang Fu(付方芳) - 2015</p>
+        </div>
+    </div>
 </body>
 </html>
