--- a/profile.html
+++ b/profile.html
@@ -1,24 +1,27 @@
-<<html>
+<html>
 <header>
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
 	<script type="text/javascript" src="scripts/jquery-2.1.4.min.js" ></script>
 </header>
 <body>
-	<div class="navigation">
-		<h1>Fangfang 方芳</h1>
-		<ul>
+	<div class="box">
+        <div class='title'>
+            <h1>Fangfang 方芳</h1>
+        </div>
+		<ul class="navbar">
 		  <li><a href="index.html">Home</a></li>
 		  <li><a href="profile.html">Profile</a></li>
+          <li><a href="project.html">Projects</a></li>
 		  <li><a href="garden.html">Garden</a></li>
 		  <li><a href="cooking.html">Cooking</a></li>
 		</ul>
-	</div>
-	<div>
-	  <h2>Profile</h2>
-	  <p>Hello everyone, welcome to Fangfang's profile. If you want to see Fangfang's information, please come back later. Profile is building...</p>
-	</div>
-	<div class="footer">
-		<p>&copy; Fangfang Fu(付方芳) - 2015</p>
-	</div>
+        <div class="content">
+        <h2>Profile</h2>
+        <p>Hello everyone, welcome to Fangfang's profile. If you want to see Fangfang's profile, please come back later. Kitchen is building...</p>
+        </div>
+        <div class="footer">
+            <p>&copy; Fangfang Fu(付方芳) - 2015</p>
+        </div>
+    </div>
 </body>
 </html>
