--- a/project.html
+++ b/project.html
@@ -1,8 +1,6 @@
 <html>
 <header>
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
-	<script type="text/javascript" src="scripts/jquery-2.1.4.min.js" ></script>
-</header>
 <body>
 	<div class="box">
         <div class='title'>
@@ -14,14 +12,25 @@
           <li><a href="project.html">Projects</a></li>
 		  <li><a href="garden.html">Garden</a></li>
 		  <li><a href="cooking.html">Cooking</a></li>
+          <li>
+              <a href="#">Contact</a>
+              <ul>
+                  <li><p>Tel: (219) 916-1330</p>
+                  <li><a href="http://mail.google.com">fangfang@fufangfang.com</a></li>
+                  <li><a href="http://www.facebook.com/fangfang.fu.315">Facebook</a></li>
+                  <li><a href="http://user.qzone.qq.com/450490365">QQzone</a></li>
+              </ul>
+          </li>
 		</ul>
         <div class="content">
-        <h2>Profile</h2>
-        <p>Hello everyone, welcome to Fangfang's projects. If you want to see Fangfang's projects, please come back later. Kitchen is building...</p>
+          <h1>Profile</h1>
+          <p>Hello everyone, welcome to Fangfang's projects. If you want to see Fangfang's projects, please come back later. Project is building...</p>
         </div>
         <div class="footer">
             <p>&copy; Fangfang Fu(付方芳) - 2015</p>
         </div>
     </div>
+    <script type="text/javascript" src="scripts/jquery-2.1.4.min.js" ></script>
+    <script type="text/javascript" src="scripts/scripts.js" ></script>
 </body>
 </html>
