--- a/garden.html
+++ b/garden.html
@@ -1,7 +1,16 @@
 <html>
-<header>
+<head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
-</header>
+    <style>
+    .content {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      justify-content: space-around;
+      align-items: center;  
+    }        
+    </style>
+</head>
 <body>
 	<div class="box">
         <div class='title'>
@@ -14,8 +23,8 @@
 		  <li><a href="garden.html">Garden</a></li>
 		  <li><a href="cooking.html">Cooking</a></li>
           <li>
-              <a href="#">Contact</a>
-              <ul>
+              <a  class="contact" href="#">Contact<span class='caret'></span></a>
+              <ul class="slidedown">
                   <li><p>Tel: (219) 916-1330</p>
                   <li><a href="http://mail.google.com">fangfang@fufangfang.com</a></li>
                   <li><a href="http://www.facebook.com/fangfang.fu.315">Facebook</a></li>
@@ -24,7 +33,7 @@
           </li>
 		</ul>
         <div class="content">
-          <h1>Profile</h1>
+          <h1>Garden</h1>
           <p>Hello everyone, welcome to Fangfang's garden. If you want to see Fangfang's garden, please come back later. Garden is building...</p>
         </div>
         <div class="footer">
