--- a/profile.html
+++ b/profile.html
@@ -1,18 +1,16 @@
 <html>
-<header>
+<head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
     <style>
-        .content {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        justify-content: space-around;
-        align-items: center;
-        align-content: space-around;
-        }
-        
+    .content {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      justify-content: space-around;
+      align-items: center;  
+    }        
     </style>
-</header>
+</head>
 <body>
 	<div class="box">
         <div class='title'>
@@ -25,8 +23,8 @@
 		  <li><a href="garden.html">Garden</a></li>
 		  <li><a href="cooking.html">Cooking</a></li>
           <li>
-              <a href="#">Contact</a>
-              <ul>
+              <a  class="contact" href="#">Contact<span class='caret'></span></a>
+              <ul class="slidedown">
                   <li><p>Tel: (219) 916-1330</p>
                   <li><a href="http://mail.google.com">fangfang@fufangfang.com</a></li>
                   <li><a href="http://www.facebook.com/fangfang.fu.315">Facebook</a></li>
