--- a/garden.html
+++ b/garden.html
@@ -2,19 +2,39 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
     <style>
+     img {
+      width: 15em;
+      height: 15em;
+    }
     .content {
+      padding-top: 2em;
+    }
+    .content h1 {
+        text-align: center;
+    } 
+    .content1, .content2{
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       flex-wrap: nowrap;
       justify-content: space-around;
       align-items: center;  
-    }        
+    }
+    .container1 {
+        flex-grow: 1;
+        padding-right: 2%;
+        margin: auto;
+    }
+    .container2{
+        flex-grow: 1;
+        margin: auto;
+    } 
+          
     </style>
 </head>
 <body>
 	<div class="box">
         <div class='title'>
-            <h1>Fangfang 方芳</h1>
+            <h1>Fangfang</h1>
         </div>
 		<ul class="navbar">
 		  <li><a href="index.html">Home</a></li>
@@ -34,7 +54,26 @@
 		</ul>
         <div class="content">
           <h1>Garden</h1>
-          <p>Hello everyone, welcome to Fangfang's garden. If you want to see Fangfang's garden, please come back later. Garden is building...</p>
+          <div class="content1">
+              <div class="container1">
+                <img id="flower1" src="images/image1.jpg">
+                <figcaption>Fig.1 - Mackinac Island</figcaption>
+              </div>
+              <div class="container2">
+                <img id="flower2" src="images/image2.jpg">
+                <figcaption>Fig.2 - Mackinac Island</figcaption>
+              </div>
+          </div>
+          <div class="content2">
+              <div class="container1">
+                <img id="flower3" src="images/image3.jpg">
+                <figcaption>Fig.3 - Mackinac Island</figcaption>
+              </div>
+              <div class="container2">
+                <img id="flower4" src="images/image4.jpg">
+                <figcaption>Fig.4 - Mackinac Island</figcaption>
+              </div>
+          </div>
         </div>
         <div class="footer">
             <p>&copy; Fangfang Fu(付方芳) - 2015</p>
