--- a/index.html
+++ b/index.html
@@ -17,23 +17,25 @@
     }
     .content1 {
         flex-grow: 1;
-        margin-right: 30px;
+        margin-right: 3%;
     }
     .content2{
         flex-grow: 1;
-        margin-right: 30px;
+        margin-right: 3%;
     }
     .content3{
         flex-grow: 1;   
         flex-wrap: wrap;
+        border: 0.2em dashed #AEB05D;
+        
     }
     p.thick {
         font-weight: bold;
     }
     button {
-        width: 250px;
+        width: 100%;
         height: 30px;
-        margin-bottom: 20px;
+        margin-bottom: 4%;
         font-size: 1em;
         background-color: #E39871;
     }
