--- a/project.html
+++ b/project.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="box">
         <div class='title'>
-            <h1>Fangfang 方芳</h1>
+            <h1>Fangfang</h1>
         </div>
 		<ul class="navbar">
 		  <li><a href="index.html">Home</a></li>
