--- a/cooking.html
+++ b/cooking.html
@@ -57,7 +57,7 @@
           <h1>Cooking</h1>
           <div class="content1">
             <div class="container1">
-              <img id="cook1" src="images/zongzi.jpg">
+              <img id="cook1" src="images/zongzi.JPG">
               <figcaption>Fig.1 - A bowl of pre-cooked meat Zongzi</figcaption>
             </div>
             <div class="container2">
