--- a/garden.html
+++ b/garden.html
@@ -56,21 +56,21 @@
           <h1>Garden</h1>
           <div class="content1">
               <div class="container1">
-                <img id="flower1" src="images/image1.jpg">
+                <img id="flower1" src="images/image1.JPG">
                 <figcaption>Fig.1 - Mackinac Island</figcaption>
               </div>
               <div class="container2">
-                <img id="flower2" src="images/image2.jpg">
+                <img id="flower2" src="images/image2.JPG">
                 <figcaption>Fig.2 - Mackinac Island</figcaption>
               </div>
           </div>
           <div class="content2">
               <div class="container1">
-                <img id="flower3" src="images/image3.jpg">
+                <img id="flower3" src="images/image3.JPG">
                 <figcaption>Fig.3 - Mackinac Island</figcaption>
               </div>
               <div class="container2">
-                <img id="flower4" src="images/image4.jpg">
+                <img id="flower4" src="images/image4.JPG">
                 <figcaption>Fig.4 - Mackinac Island</figcaption>
               </div>
           </div>
