--- a/garden.html
+++ b/garden.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
     <style>
      img {
-      width: 15em;
+      width: 20em;
       height: 15em;
     }
     .content {
@@ -15,19 +15,20 @@
     .content1, .content2{
       display: flex;
       flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: space-around;
-      align-items: center;  
+      margin-left: 10%;  
+    }
+    .content1 {
+        margin-bottom: 6%;
     }
     .container1 {
         flex-grow: 1;
-        padding-right: 2%;
-        margin: auto;
     }
     .container2{
         flex-grow: 1;
-        margin: auto;
-    } 
+    }
+    figcaption {
+        padding-left: 20%;
+    }
           
     </style>
 </head>
