--- a/project.html
+++ b/project.html
@@ -1,24 +1,59 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
-    <style>
+	<style>
+	#profile-photo {
+	  border-radius: 50%;
+      width: 15em;
+      height: 15em;
+    }
     .content {
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       flex-wrap: nowrap;
       justify-content: space-around;
       align-items: center;  
-    }        
-    </style>
+    }
+    .content1 {
+        flex-grow: 1;
+        margin-right: 3%;
+    }
+    .content2{
+        flex-grow: 1;
+        margin-right: 3%;
+    }
+    .content3{
+        flex-grow: 1;   
+        flex-wrap: wrap;
+        border: 0.2em dashed #AEB05D;
+        
+    }
+    p.thick {
+        font-weight: bold;
+    }
+    button {
+        width: 100%;
+        height: 30px;
+        margin-bottom: 4%;
+        font-size: 1em;
+        background-color: #E39871;
+    }
+    #email {
+        background-color: #D3A46E;
+    }
+    #qq {
+        background-color: #DF7D60;
+    }
+	</style>
 </head>
 <body>
 	<div class="box">
-        <div class='title'>
-            <h1>Fangfang</h1>
+        <div class="title">
+		  <h1>Fangfang Fu</h1>
         </div>
 		<ul class="navbar">
 		  <li><a href="index.html">Home</a></li>
-		  <li><a href="profile.html">Profile</a></li>
           <li><a href="project.html">Projects</a></li>
 		  <li><a href="garden.html">Garden</a></li>
 		  <li><a href="cooking.html">Cooking</a></li>
@@ -33,8 +68,20 @@
           </li>
 		</ul>
         <div class="content">
-          <h1>Project</h1>
-          <p>Hello everyone, welcome to Fangfang's projects. If you want to see Fangfang's projects, please come back later. Project is building...</p>
+            <div class="content1">
+              <img id="profile-photo" src="images/fangfang.png">
+            </div>
+            <div class="content2">
+              <h1>WEB DEVELOPER</h1>
+              <p>Welcome to Fangfang's website. I am a developer. Right now I am a sophomome student of computer science major and focusing on web development. I am looking for a developer internship. Feel free to look at my projects and do not hesitate to contact me!</p>
+            </div>
+            <div class="content3">
+              <p class="thick">Contact information</p>
+              <p>Tel: (219) 916-1330</p>
+              <button type="button" id="email">fangfang@fufangfang.com</button>
+              <button type="button" id="facebook">Facebook</button>
+              <button type="button" id="qq">QQzone</button>
+            </div>
         </div>
         <div class="footer">
             <p>&copy; Fangfang Fu(付方芳) - 2015</p>
