--- a/project.html
+++ b/project.html
@@ -73,7 +73,7 @@
             </div>
             <div class="content2">
               <h1>WEB DEVELOPER</h1>
-              <p>Welcome to Fangfang's website. I am a developer. Right now I am a sophomome student of computer science major and focusing on web development. I am looking for a developer internship. Feel free to look at my projects and do not hesitate to contact me!</p>
+              <p>Welcome to Fangfang's website. I am a developer. Right now I am a sophomore student of computer science major and focusing on web development. I am looking for a developer internship. Feel free to look at my projects and do not hesitate to contact me!</p>
             </div>
             <div class="content3">
               <p class="thick">Contact information</p>
