Fix links to projects using images

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/benchmark.jpg" class="portfolio-box">
+                    <a href="https://github.com/FangfangFu/IoT-Database-Benchmark" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/benchmark.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -169,7 +169,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/chatroom.PNG" class="portfolio-box">
+                    <a href="https://github.com/FangfangFu/Chatroom-Server" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/chatroom.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -184,7 +184,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/snake.PNG" class="portfolio-box">
+                    <a href="https://github.com/FangfangFu/snake" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/snake.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -199,7 +199,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/pigprofile.PNG" class="portfolio-box">
+                    <a href="https://github.com/FangfangFu/Pig-profile" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/pigprofile.PNG" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
