--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Get To Know Me!</h2>
                     <hr class="light">
-                    <p class="text-faded">My name is Fangfang Fu. I'm a software developer who is studying computer science in University of Illinois at Chicago. I love programming and always pursue to learn more about computer related technologies.</p>
+                    <p class="text-faded">My name is Fangfang Fu. I'm a Software Engineer and currently working at a Payment Coporation. I am open to any new oppotunity. I love programming and have done so for almost 2 years. I love working with people to do things bigger than I could accomplish alone.</p>
                     <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Skills</a>
                 </div>
             </div>
@@ -107,28 +107,28 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-laptop wow bounceIn text-primary"></i>
                         <h3>Languages</h3>
-                        <p class="text-muted">C, C++, Java</p>
+                        <p class="text-muted">Java, Golang, C, C++</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-server wow bounceIn text-primary"></i>
-                        <h3>Web Development</h3>
-                        <p class="text-muted">JavaScript, HTML, CSS, jQuery, JSON, AJAX</p>
+                        <h3>Technologies</h3>
+                        <p class="text-muted">Spring framework, gRPC, Redis, Kafka, Consul, Ansible</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-database wow bounceIn text-primary"></i>
                         <h3>Database</h3>
-                        <p class="text-muted">SQL</p>
+                        <p class="text-muted">Redis</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-gears wow bounceIn text-primary"></i>
                         <h3>Development Tools</h3>
-                        <p class="text-muted">Git, Visual Studio, Eclipse</p>
+                        <p class="text-muted">Git, IntelliJ, Goland</p>
                     </div>
                 </div>
             </div>
